--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -18,6 +18,7 @@
 #myCalculator main section {
   width: 25%;
   float: left;
+  text-align: center;
   padding-top: 110px;
   color: #fff;
   background-repeat: no-repeat;
@@ -31,3 +32,22 @@
   clear: both;
 }
 
+#myCalculator main section.inc {
+  background-color: #ba2d2d;
+  background-image: url(images/bulb_inc.svg);
+}
+
+#myCalculator main section.hal {
+  background-color: #de6615;
+  background-image: url(images/bulb_hal.svg);
+}
+
+#myCalculator main section.cfl {
+  background-color: #efc20f;
+  background-image: url(images/bulb_cfl.svg);
+}
+
+#myCalculator main section.led {
+  background-color: #36b23c;
+  background-image: url(images/bulb_led.svg);
+}
