--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -51,3 +51,16 @@
   background-color: #36b23c;
   background-image: url(images/bulb_led.svg);
 }
+
+#myCalculator main section > div {
+  padding: 5px 0;
+  background-color: rgba(0,0,0,.15);
+}
+
+#myCalculator main h4 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: .8em;
+  letter-spacing: 1px;
+  margin: 0 0 5px 0;
+  text-transform: uppercase;
+}
