--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -113,3 +113,42 @@
   display: block;
   clear: both;
 }
+
+#myCalculator form h4 {
+  color: #aaa;
+  margin: 0 0 -5px 0;
+  font-size: 1.5em;
+  font-weight: 300;
+}
+
+#myCalculator form p {
+  color: #888;
+  margin: 0 0 6px 0;
+  font-size: .9em;
+}
+
+#myCalculator form input[type=number] {
+  width: 50px;
+  text-align: left;
+  font-size: 1em;
+}
+
+#myCalculator form select {
+  font-size: 1em;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  /*background: #fff url(images/icons_arrow.svg) no-repeat right 6px;*/
+  background-size: url(images/icons_arrow.svg);
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: right 6px;
+  background-size: 30px 20px;
+  padding: 3px 30px 3px 5px;
+}
+
+#myCalculator form select::-ms-expand {
+  display: none;
+}
