--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -182,4 +182,27 @@
     margin-top: -10px;
     color: #fff;
   }
+
+  #myCalculator form h4 {
+    font-size: 1.1em;
+    margin: 0;
+  }
+
+  #myCalculator form p {
+    font-size: .8em;
+    line-height: 14px;
+  }
+
+  #myCalculator form br {
+    display: inline;
+  }
+
+  #myCalculator form input[type=number] {
+    width: 30px;
+    font-size: .8em;
+  }
+
+  #myCalculator form select {
+    font-size: .8em;
+  }
 }
